--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.3", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.7.0", features = ["http-all"] }
+tauri = { version = "1.7.0", features = [ "protocol-asset", "path-all", "fs-read-file", "fs-remove-dir", "fs-copy-file", "fs-read-dir", "fs-remove-file", "fs-create-dir", "fs-write-file", "dialog-all", "http-all"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
