Router, KeepAlive cacher and logger implementation

--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "overlayscrollbars": "^2.10.0",
     "overlayscrollbars-solid": "^0.5.5",
     "solid-js": "^1.9.3",
+    "solid-keep-alive": "^0.2.3",
     "solid-motionone": "^1.0.2",
     "vite-plugin-solid-svg": "^0.8.1"
   }
