--- a/app/package.json
+++ b/app/package.json
@@ -7,10 +7,13 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "tauri": "tauri"
   },
   "license": "MIT",
   "devDependencies": {
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2",
     "@types/node": "^22.9.1",
     "less": "^4.2.0",
     "solid-devtools": "^0.29.2",
@@ -21,6 +24,7 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.15.1",
+    "@tauri-apps/cli": "^2",
     "motion": "^11.11.17",
     "overlayscrollbars": "^2.10.0",
     "overlayscrollbars-solid": "^0.5.5",
