Major ImageBroser usability update, add new icons, add loading indication component and imageProcessor implementation in separate thread

--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "vite-tsconfig-paths": "^5.1.2"
   },
   "dependencies": {
+    "@solid-devtools/overlay": "^0.33.0",
     "@solidjs/router": "^0.15.1",
     "@tauri-apps/cli": "^2",
     "comlink": "^4.4.2",
