Handle ImageBrowser uploading failure

--- a/app/package.json
+++ b/app/package.json
@@ -12,16 +12,21 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@solidjs/testing-library": "^0.8.10",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.9.1",
+    "jsdom": "^26.0.0",
     "less": "^4.2.0",
     "solid-devtools": "^0.29.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-comlink": "^5.1.0",
     "vite-plugin-solid": "^2.8.2",
-    "vite-tsconfig-paths": "^5.1.2"
+    "vite-tsconfig-paths": "^5.1.2",
+    "vitest": "^3.0.4"
   },
   "dependencies": {
     "@solid-devtools/overlay": "^0.33.0",
