--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@solid-devtools/logger": "^0.9.7",
     "@solidjs/testing-library": "^0.8.10",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
@@ -20,25 +21,28 @@
     "@types/node": "^22.9.1",
     "jsdom": "^26.0.0",
     "less": "^4.2.0",
-    "solid-devtools": "^0.29.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.11",
+    "vite": "^6.0.8",
+    "vite-plugin-babel-macros": "^1.0.6",
     "vite-plugin-comlink": "^5.1.0",
-    "vite-plugin-solid": "^2.8.2",
+    "vite-plugin-solid": "^2.11.0",
     "vite-tsconfig-paths": "^5.1.2",
     "vitest": "^3.0.4"
   },
   "dependencies": {
-    "@solid-devtools/overlay": "^0.33.0",
     "@solidjs/router": "^0.15.1",
     "@tauri-apps/cli": "^2",
+    "clsx": "^2.1.1",
     "comlink": "^4.4.2",
     "motion": "^11.11.17",
     "overlayscrollbars": "^2.10.0",
     "overlayscrollbars-solid": "^0.5.5",
-    "solid-js": "^1.9.3",
+    "solid-devtools": "^0.33.0",
+    "solid-js": "^1.9.4",
     "solid-keep-alive": "^0.2.3",
     "solid-motionone": "^1.0.2",
-    "vite-plugin-solid-svg": "^0.8.1"
+    "ts-to-zod": "^3.15.0",
+    "vite-plugin-solid-svg": "^0.8.1",
+    "zod": "^3.24.2"
   }
 }
