--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -3,11 +3,12 @@
     "strict": true,
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "allowSyntheticDefaultImports": true,
     "allowImportingTsExtensions": true,
     "esModuleInterop": true,
     "jsx": "preserve",
+    "allowJs": true,
     "jsxImportSource": "solid-js",
     "types": ["vite/client"],
     "noEmit": true,
