--- a/app/package.json
+++ b/app/package.json
@@ -13,12 +13,14 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@inlang/paraglide-js": "1.11.8",
     "@solid-devtools/logger": "^0.9.7",
     "@solidjs/testing-library": "^0.8.10",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.9.1",
     "jsdom": "^26.0.0",
     "less": "^4.2.0",
@@ -28,14 +30,14 @@
     "vite-plugin-comlink": "^5.1.0",
     "vite-plugin-solid": "^2.11.0",
     "vite-tsconfig-paths": "^5.1.2",
-    "vitest": "^3.0.4",
-    "@inlang/paraglide-js": "1.11.8"
+    "vitest": "^3.0.4"
   },
   "dependencies": {
     "@solidjs/router": "^0.15.1",
     "@tauri-apps/cli": "^2",
     "clsx": "^2.1.1",
     "comlink": "^4.4.2",
+    "lodash": "^4.17.21",
     "motion": "^11.11.17",
     "overlayscrollbars": "^2.10.0",
     "overlayscrollbars-solid": "^0.5.5",
