--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@inlang/paraglide-js": "1.11.8",
+    "@inlang/paraglide-js": "^2.3.0",
     "@solid-devtools/logger": "^0.9.11",
     "@solidjs/testing-library": "^0.8.10",
     "@tauri-apps/api": "^2",
