--- a/app/project.inlang/settings.json
+++ b/app/project.inlang/settings.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://inlang.com/schema/project-settings",
-  "baseLocale": "ru",
+  "baseLocale": "en",
   "locales": [
     "en",
     "ru"
